fix nav overflow

--- a/frontend/src/components/Footer/style.scss
+++ b/frontend/src/components/Footer/style.scss
@@ -1,160 +1,151 @@
 @import '../../styles/main';
 
 .Footer {
-	align-items: center;
-	justify-content: flex-start;
-	padding: 140px 50px;
-	background: $junction-white;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 140px 50px;
+    background: $junction-white;
 
-	.FooterInner {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		max-width: 1200px;
-		width: 100%;
-		margin: 0 auto;
+    .FooterInner {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        max-width: 1200px;
+        width: 100%;
+        margin: 0 auto;
 
-		display: flex;
-		flex-direction: column;
-		justify-content: flex-start;
-		align-items: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
 
-		@include bp-full {
-			flex-direction: row;
-			justify-content: center;
-			align-items: flex-start;
-		}
+        @include bp-full {
+            flex-direction: row;
+            justify-content: center;
+            align-items: flex-start;
+        }
 
-		&--left {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			width: 100%;
-			max-width: 320px;
+        &--left {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            max-width: 320px;
 
-			@include bp-full {
-				align-items: flex-start;
-			}
+            @include bp-full {
+                align-items: flex-start;
+            }
 
-			&__logo {
-				width: 100%;
-			}
+            &__logo {
+                width: 100%;
+            }
 
-			&__slogan {
-				color: $junction-black;
-				font-size: 24px;
-				text-align: center;
+            &__slogan {
+                color: $junction-black;
+                font-size: 24px;
+                text-align: center;
 
-				@include bp-full {
-					text-align: left;
-				}
-			}
+                @include bp-full {
+                    text-align: left;
+                }
+            }
 
-			&__contact {
-				color: $junction-black;
-				text-decoration: none;
-				font-size: 20px;
-				text-align: center;
+            &__contact {
+                color: $junction-black;
+                text-decoration: none;
+                font-size: 20px;
+                text-align: center;
 
-				@include bp-full {
-					text-align: left;
-				}
-			}
-		}
+                @include bp-full {
+                    text-align: left;
+                }
+            }
+        }
 
-		&--separator {
-			margin-top: 20px;
-			// height: 150px;
-			// width: 2px;
-			// margin-left: 110px;
-			// margin-right: 110px;
-			background: $lightgrey;
+        &--separator {
+            margin-top: 20px;
+            // height: 150px;
+            // width: 2px;
+            // margin-left: 110px;
+            // margin-right: 110px;
+            background: $lightgrey;
 
-			width: 320px;
-			height: 2px;
-			margin: 60px 0;
+            width: 320px;
+            height: 2px;
+            margin: 60px 0;
 
-			@include bp-full {
-				height: 150px;
-				width: 2px;
-				margin: 0 90px;
-			}
-		}
+            @include bp-full {
+                height: 150px;
+                width: 2px;
+                margin: 0 90px;
+            }
+        }
 
-		&--right {
-			flex: 1;
-			display: flex;
-			// flex-direction: row;
-			// justify-content: space-between;
-			// flex-wrap: wrap;
-			// max-width: 600px;
+        &--right {
+            display: flex;
 
-			flex-direction: row;
-			align-items: flex-start;
-			justify-content: center;
-			flex-wrap: wrap;
-			align-self: stretch;
+            flex-direction: row;
+            align-items: flex-start;
+            justify-content: center;
+            flex-wrap: wrap;
+            align-self: stretch;
 
-			// @include bp-med {
-			// 	flex-direction: row;
-			// 	align-items: flex-start;
-			// 	justify-content: center;
-			// }
+            @include bp-full {
+                justify-content: flex-start;
+            }
 
-			@include bp-full {
-				justify-content: flex-end;
-			}
+            &__section {
+                display: flex;
+                flex-direction: column;
+                margin-bottom: 30px;
+                width: 100%;
+                max-width: 200px;
+                min-width: 150px;
+                align-items: center;
 
-			&__section {
-				display: flex;
-				flex-direction: column;
-				margin-bottom: 30px;
-				width: 100%;
-				max-width: 200px;
-				min-width: 150px;
-				align-items: center;
+                @include bp-full {
+                    align-items: flex-start;
+                    flex: 1;
+                    margin-right: $padding-double;
+                }
 
-				@include bp-full {
-					align-items: flex-start;
-					flex: 1;
-				}
+                &-title {
+                    color: $lightgrey;
+                    margin-top: 0;
+                    text-align: center;
+                    font-size: 13px;
+                    line-height: 16px;
 
-				&-title {
-					color: $lightgrey; 
-					margin-top: 0;
-					text-align: center;
-					font-size: 13px;
+                    @include bp-full {
+                        text-align: left;
+                    }
+                }
 
-					@include bp-full {
-						text-align: left;
-					}
-				}
+                &-link {
+                    color: $junction-black;
+                    text-decoration: none;
+                    font-size: 16px;
+                    line-height: 22px;
+                    text-align: center;
 
-				&-link {
-					color: $junction-black;
-					text-decoration: none;
-					font-size: 16px;
-					line-height: 22px;
-					text-align: center;
+                    @include bp-full {
+                        text-align: left;
+                    }
+                }
+            }
+        }
+    }
 
-					@include bp-full {
-						text-align: left;
-					}
-				}
-			}
-		}
-	}
+    .FooterBottom {
+        width: 100%;
+        max-width: 1200px;
+        text-align: center;
+        margin: 0 auto;
+        margin-top: 140px;
 
-	.FooterBottom {
-		width: 100%;
-		max-width: 1200px;
-		text-align: center;
-		margin: 0 auto;
-		margin-top: 140px;
-
-		&--text {
-			@extend %font-title;
-			color: $lightgrey;
-		}
-	}
+        &--text {
+            @extend %font-title;
+            color: $lightgrey;
+        }
+    }
 }
