--- a/frontend/src/components/Header/NavMenu/style.scss
+++ b/frontend/src/components/Header/NavMenu/style.scss
@@ -36,11 +36,11 @@
     background: $junction-white;
     display: flex;
     flex-direction: column;
-    padding: 100px 0;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     pointer-events: all;
     transition: all 0.4s ease;
+    overflow-y: scroll;
 
     &-open {
         left: 0;
@@ -69,9 +69,8 @@
 
     &--inner {
         width: 300px;
-        display: flex;
-        flex-direction: column;
-        align-items: stretch;
+        margin: 100px 0;
+        flex: 1;
 
         &__logo {
             width: 100%;
