--- a/frontend/src/components/HeaderVideo/style.scss
+++ b/frontend/src/components/HeaderVideo/style.scss
@@ -8,7 +8,6 @@
     position: relative;
     overflow: hidden;
     z-index: 0;
-    background: black;
     transition: height 0.2s ease;
     height: 380px;
 
